tests/typechecker/pass/024-struct-field-assign.hyg
let s: struct {f: int; g: bool} = struct {f = 42; g = true};
s.f <- 43;
s.g <- s.g <- false
