tests/typechecker/fail/016-struct.hyg
struct {f = 42; g = true; f = 44}
